fix menu spacing/remove extraneous css files

--- a/bcclient/src/components/budgetcalculator/css/bc_custom_2020.scss
+++ b/bcclient/src/components/budgetcalculator/css/bc_custom_2020.scss
@@ -1,4 +1,3 @@
-//Import Lato font
 @import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
 @import url("https://fonts.googleapis.com/icon?family=Material+Icons");
 @import url("https://cdn.datatables.net/1.10.20/css/dataTables.bootstrap4.min.css");
@@ -14,6 +13,8 @@ body {
   margin: 0;
   padding: 0;
   overflow: auto;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 #pagecontainer {
@@ -94,6 +95,7 @@ li>a#bdgtcalc-nav:hover, a.nav-link.dropdown-toggle:hover {
 .navbar-nav li:hover > ul.dropdown-menu {
     display: block;
     margin-top:0px;
+    min-width: 17rem;
 }
 
 li.dropdown-submenu, li#bc-dropdown-li {
@@ -131,6 +133,16 @@ li.bc-dropdown-li-search {
 .dropdown-menu > li > a:hover:after {
   text-decoration: none;
   transform: rotate(-90deg);
+}
+
+.dropdown-submenu {
+  position: relative;
+}
+
+.dropdown-submenu .dropdown-menu {
+  top: 0;
+  left: 100%;
+  margin-top: -1px;
 }
 
 .hide {
@@ -183,7 +195,6 @@ li a.dropdown-item:hover
     font-weight: 400;
     color: #000000;
     line-height: normal;
-    // font-family: "Open Sans",Helvetica,Arial,sans-serif;
     font-size: 13px;
     text-align: left;
     box-sizing: border-box;
@@ -205,7 +216,6 @@ li a.dropdown-item:hover
 }
 
 /* REDCAP CSS */
-
 p,.p {
   font-size: 13px;
   text-align: left;
@@ -304,20 +314,6 @@ th.hide-border {
   background-color: lightgrey;
 }
 
-.dropdown-submenu {
-  position: relative;
-}
-
-.dropdown-submenu .dropdown-menu {
-  top: 0;
-  left: 100%;
-  margin-top: -1px;
-}
-
-.dropdown-menu > li {
-  margin-left: 50px;
-}
-
 .action-button {
   text-align: center;
   padding: 5px;
@@ -338,31 +334,3 @@ th.hide-border {
 #form {
   display: none;
 }
-
-/* These can most likely be deleted */
-
-/* Rounded div corners */
-/* input.btn {
-  cursor: pointer;
-  font-size: 13px;
-  font-family: "Open Sans",Verdana,arial;
-  padding: 2px 6px 2px 6px;
-  margin: 0 3px 0 3px;
-  border: 1px solid;
-  border-color: #aaa #444 #444 #aaa;
-  color: #222;
-  background-color: #e3e3e3;
-}
-
-input.btn2 {
-  cursor: pointer;
-  padding: 1px 5px;
-  margin: 0 3px;
-  border: 1px solid;
-  border-color: #9FB3FF #365AB6 #365AB6 #9FB3FF;
-  color: #222;
-  background-color: #CBD5EF;
-  position: relative;
-  font-family: "Open Sans",arial;
-  font-size: 10px;
-} */
